# fastwlk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml  publish-poetry-build.yml  publish-to-test-pypi.yml
data/: test_encoding_graph_1.json
docs/: .buildinfo  Makefile  authors.html  contributing.html  fastwlk.html  fastwlk.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  make.bat  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  fastwlk.doctree  modules.doctree  readme.doctree  usage.doctree
docs/_build/html/: contributing.html  genindex.html  installation.html  modules.html  py-modindex.html  search.html  usage.html
docs/_modules/: index.html
docs/_sources/: installation.rst.txt  usage.rst.txt
docs/doctrees/: environment.pickle  index.doctree  installation.doctree
docs/html/: index.html  objects.inv  readme.html  searchindex.js
docsource/: conf.py  installation.rst  modules.rst  usage.rst
examples/: basic_usage.ipynb  benchmark.py  download.sh  example.ipynb  performance_decorators.py
fastwlk/: __init__.py  fastwlk.py  kernel.py
fastwlk/utils/: exception.py  functions.py  validation.py
tests/: __init__.py  test_fastwlk.py  test_functions.py  test_kernel.py
(+3 files in other folders)
