[tool.poetry]
name = "fastwlk"
version = "0.1.0"
description = "fastwlk is a Python package that implements a fast version of the Weisfeiler-Lehman kernel."
authors = ["Philip Hartout <philip.hartout@protonmail.com>"]
license = "BSD-3 Clause License"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
networkx = "^2.6.3"
numpy = "^1.22.1"
tqdm = "^4.62.3"
build = "^0.7.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
grakel = "^0.1.8"
biopython = "^1.79"
pyprojroot = "^0.2.0"
mypy = "^0.931"
isort = "^5.10.1"
pytest = "^6.2.5"
pre-commit = "^2.17.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
src_paths = ["src", "tests"]
float_to_top = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
